/*
 * Copyright (c) 2018 by Delphix. All rights reserved.
 */

syntax = "proto3";

import "delphix.proto";

option java_multiple_files = true;

package com.delphix.virtualization.platform;

/* DISCOVERY */

message RepositoryDiscoveryInput {
  com.delphix.virtualization.common.RemoteConnection sourceConnection = 1;
}

message RepositoryDiscoveryOutput {
  repeated com.delphix.virtualization.common.PluginDefinedObject repositoryList = 1;
}

message SourceConfigDiscoveryInput {
  com.delphix.virtualization.common.RemoteConnection sourceConnection = 1;
  com.delphix.virtualization.common.Repository repository = 2;
}

message SourceConfigDiscoveryOutput {
  repeated com.delphix.virtualization.common.PluginDefinedObject sourceConfigList = 1;
}

/* DIRECT LINKING */

message DirectPreSnapshotInput {
  com.delphix.virtualization.common.DirectSource directSource = 1;
  com.delphix.virtualization.common.Repository repository = 2;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 3;
}

message DirectPostSnapshotInput {
  com.delphix.virtualization.common.DirectSource directSource = 1;
  com.delphix.virtualization.common.Repository repository = 2;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 3;
}

/* STAGED LINKING */

message StagedPreSnapshotInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.StagedSource stagedSource = 3;
}

message StagedPostSnapshotInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.StagedSource stagedSource = 3;
}

message StagedResyncInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.StagedSource stagedSource = 3;
}

message StartStagingInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.StagedSource stagedSource = 3;
}

message StopStagingInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.StagedSource stagedSource = 3;
}

message StagedStatusInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.StagedSource stagedSource = 3;
}

message StagedStatusOutput {
  enum Status {
    ACTIVE = 0;
    INACTIVE = 1;
  }
  Status status = 1;
}

message StagedWorkerInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.StagedSource stagedSource = 3;
}

message StagedMountSpecInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.StagedSource stagedSource = 2;
}

message StagedMountSpecOutput {
  string mountPath = 1;
  com.delphix.virtualization.common.OwnershipSpec ownershipSpec = 2;
}

/* PROVISIONING */

message ConfigureInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.Snapshot snapshot = 2;
  com.delphix.virtualization.common.VirtualSource source = 3;
}

message ConfigureOutput {
  com.delphix.virtualization.common.PluginDefinedObject sourceConfig = 1;
}

message UnconfigureInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
  bool deleteFlag = 4;
}

message ReconfigureInput {
  com.delphix.virtualization.common.Snapshot snapshot = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
}

message ReconfigureOutput {
  com.delphix.virtualization.common.PluginDefinedObject sourceConfig = 1;
}

message StartInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
}

message StopInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
}

message VirtualPreSnapshotInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
}

message VirtualPostSnapshotInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
}

message VirtualPostSnapshotOutput {
  com.delphix.virtualization.common.PluginDefinedObject snapshot = 1;
}

message VirtualStatusInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
}

message VirtualStatusOutput {
  enum Status {
    ACTIVE = 0;
    INACTIVE = 1;
  }
  Status status = 1;
}

message InitializeInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.SourceConfig sourceConfig = 2;
  com.delphix.virtualization.common.VirtualSource virtualSource = 3;
}

message VirtualMountSpecInput {
  com.delphix.virtualization.common.Repository repository = 1;
  com.delphix.virtualization.common.VirtualSource virtualSource = 2;
}

message VirtualMountSpecOutput {
  com.delphix.virtualization.common.SingleMount primaryMount = 1;
  repeated com.delphix.virtualization.common.SingleMount additionalMountList = 2;
  repeated com.delphix.virtualization.common.OwnershipSpec ownershipSpecList = 3;
}

/* UPGRADE */

message UpgradeLinkedSourceInput {
  com.delphix.virtualization.common.LinkedSource linkedSource = 1;
}

message UpgradeVirtualSourceInput {
  com.delphix.virtualization.common.VirtualSource virtualSource = 1;
}

message UpgradeSourceConfig {
  com.delphix.virtualization.common.SourceConfig sourceConfig = 1;
}

message UpgradeSnapshot {
  com.delphix.virtualization.common.Snapshot snapshot = 1;
}
